# test-task-auth

./: .env-docker  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  config.py  dao.py  dependencies.py  main.py  mock_views.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 42c1c159fae2_remove_updated_at.py  916f32c12b51_add_initial_roles_and_admin.py  d545b0795b01_models.py
